added explanation note and improved swagger
